SERVER-57560 Fix error message typo in `IDLParserErrorContext::checkAndAssertBinDataTypeSlowPath`